# AI-Chatroom

./: .gitignore  AGENTS.md  README.md  api_models.py  config.json  config.py  config_loader.py  engine.py  llm_client.py  out.txt  pyproject.toml  requirements.txt  server.py  test_api.py  todo.md  tree.txt  wizard.py
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/discussion/[sessionId]/: page.tsx
frontend/src/components/: DiscussionForm.tsx  MessageStream.tsx  PersonaCard.tsx  TauriBootstrap.tsx
frontend/src/lib/: api.ts  types.ts
